implement ctns_oper_dot.h

--- a/src/ctns/readme
+++ b/src/ctns/readme
@@ -25,7 +25,11 @@ Sij and <n|CTNS>
 -------------------------------
 Hij: operators
 -------------------------------
-
+ ctns_io.h
+ ctns_oper.h
+ ctns_oper_util.h
+ ctns_oper_helper.h
+ ctns_oper_dot.h
 -------------------------------
 Optimization: decimation
 -------------------------------
@@ -41,15 +45,13 @@ qtensor:
 -------------------------------
 oper:
 -------------------------------
- tns_oper_renorm.cpp
- tns_oper_rbases.cpp
- tns_oper_opwf.cpp
- tns_oper_normal.cpp
- tns_oper_kernel.cpp
  tns_oper_init.cpp
- tns_oper_dot.cpp
+ tns_oper_rbases.cpp
+ tns_oper_renorm.cpp
+ tns_oper_normal.cpp
  tns_oper_complement.cpp
- tns_oper.h
+ tns_oper_opwf.cpp
+ tns_oper_kernel.cpp
 -------------------------------
 opt:
 -------------------------------
