--- a/src/ctns/readme
+++ b/src/ctns/readme
@@ -37,7 +37,8 @@ Hij: operators
 -------------------------------
 Optimization: decimation
 -------------------------------
-
+ ctns_opt.h
+ ctns_opt_util.h
 -------------------------------
 
 
@@ -49,15 +50,15 @@ qtensor:
 -------------------------------
 opt:
 -------------------------------
- tns_prdm.h
- tns_prdm.cpp
  tns_opt.h
  tns_opt.cpp
- tns_initial.h
- tns_initial.cpp
- tns_ham_twodot.cpp
- tns_ham_onedot.cpp
  tns_ham.h
+ tns_ham_onedot.cpp
+ tns_ham_twodot.cpp
  tns_decimation.h
  tns_decimation.cpp
+ tns_prdm.h
+ tns_prdm.cpp
+ tns_initial.h
+ tns_initial.cpp
 
