--- a/readme
+++ b/readme
@@ -21,6 +21,6 @@ Features:
  2. Parallelization
 
 How to install:
- 1. edit makefile in extlibs/zquatev/ & make for diagonalizing quaternion matrix
- 2. edit makefile & make
+ 1. Edit makefile in extlibs/zquatev/ & make for diagonalizing quaternion matrix
+ 2. Edit makefile & make
 
