--- a/readme
+++ b/readme
@@ -23,3 +23,7 @@ How to install:
  1. Edit makefile in extlibs/zquatev/ & make for diagonalizing quaternion matrix
  2. Edit makefile & make
 
+How to run:
+ 1. run sci.x to generate initial guess
+ 2. run ctns.x to optimize CTNS
+
