--- a/readme
+++ b/readme
@@ -7,10 +7,6 @@ Goals:
  1. Explore the complexity of electronic structure problems (FeMoco, Mn12, U2, etc.)
  2. Predict magnetic parameters (g-/A-tensors) of transition metal compounds 
 
-Requirements:
- 1. C++ compiler
- 2. BOOST
-
 Functionalities: 
  1. FCI and SCI for benchmarking & preparing initial guess for TNS
  2. DMRG and CTNS with time-reversal symmetry adaptation
@@ -19,11 +15,19 @@ Features:
  1. Support NR and R Hamiltonians
  2. Parallelization
 
+Requirements:
+ 1. C++ compiler
+ 2. BOOST
+
+Tested compilations:
+ 1. GCC 9.2.0_2 + boost 1_56_0 (my macbook pro) 
+ 2. ICC 19.1.3.304 + boost 1_59_0 (lenovo@BNU)
+
 How to install:
  1. Edit makefile in extlibs/zquatev/ & make for diagonalizing quaternion matrix
  2. Edit makefile & make
 
 How to run:
  1. run sci.x to generate initial guess
- 2. run ctns.x to optimize CTNS
+ 2. run ctns.x to optimize CTNS, see examples
 
