--- a/readme
+++ b/readme
@@ -7,13 +7,13 @@ Goals:
  1. Explore the complexity of electronic structure problems (FeMoco, Mn12, U2, etc.)
  2. Predict magnetic parameters (g-/A-tensors) of transition metal compounds 
 
-Functionalities: 
- 1. FCI and SCI for benchmarking & preparing initial guess for TNS
- 2. DMRG and CTNS with time-reversal symmetry adaptation
-
 Features:
  1. Support NR and R Hamiltonians
  2. Parallelization
+
+Special functionalities: 
+ 1. FCI and SCI for benchmarking & preparing initial guesses for TNS
+ 2. DMRG and CTNS with time-reversal symmetry adaptation
 
 Requirements:
  1. C++ compiler
