--- a/readme
+++ b/readme
@@ -19,8 +19,9 @@ How to install:
       1. Edit makefile in extlibs/zquatev/ & make for diagonalizing quaternion matrix
       2. Edit makefile & make
  - Tested compilations:
-      1. ICC 19.1.3.304 + boost 1_59_0 (lenovo@BNU)
-      2. GCC 9.2.0_2 + boost 1_56_0 (my macbook pro) 
+      1. GCC 9.2.0_2 + boost 1_56_0 (macbook pro; need to > 8 for ranged for)
+      2. intel 19.1.3.304 + boost 1_75_0 (lenovo@BNU)
+      3. intel 20.0.4 + boost 1_77_0 (BSCC-A6; slurm support)
 
 How to run:
  - General procedure:	
