--- a/readme
+++ b/readme
@@ -14,7 +14,11 @@ Features:
 How to install:
  - Requirements:
       1. C++ compiler
-      2. BOOST
+      2. BOOST (https://www.boost.org/users/download/)
+      3. HDF5 (https://www.hdfgroup.org/downloads/hdf5/)
+ - Extlibs:
+      1. zquatev (https://github.com/qsimulate-open/zquatev)
+      2. HighFive (https://github.com/BlueBrain/HighFive)
  - Install:
       1. Edit makefile in extlibs/zquatev/ & make for diagonalizing quaternion matrix
       2. Edit makefile & make
