--- a/readme
+++ b/readme
@@ -22,7 +22,8 @@ How to install:
       3. h5pp (https://github.com/DavidAce/h5pp)
  - Install:
       1. Edit makefile in extlibs/zquatev/ & make for diagonalizing quaternion matrix
-      2. Edit makefile & make
+      2. Install HDF5 and add to (DY)LD_LIBRARY_PATH
+      3. Edit makefile & make
  - Tested compilations:
       1. GCC 9.2.0_2 + boost 1_56_0 (macbook pro; need to > 8 for ranged for)
       2. intel 19.1.3.304 + boost 1_75_0 (lenovo@BNU)
