--- a/readme
+++ b/readme
@@ -15,19 +15,13 @@ How to install:
  - Requirements:
       1. C++ compiler
       2. BOOST (https://www.boost.org/users/download/)
-      3. HDF5 (https://www.hdfgroup.org/downloads/hdf5/)
  - Extlibs:
-      1. zquatev (https://github.com/qsimulate-open/zquatev)
-      2. HighFive (https://github.com/BlueBrain/HighFive)
-      3. h5pp (https://github.com/DavidAce/h5pp)
+      1. zquatev (https://github.com/qsimulate-open/zquatev) for 
+	 diagonalization of quaternion matrix (relativistic case)
+      2. compression libraries: lz4 & zstd
  - Install:
-      1. Edit makefile in extlibs/zquatev/ & make for diagonalizing quaternion matrix
-      2. Install HDF5:
-	    ./configure CXX=g++ CC=gcc --enable-cxx
-	    make
-	    make install 	 
-	 add path to (DY)LD_LIBRARY_PATH
-      3. Edit makefile & make
+      1. Edit makefile in extlibs/zquatev/ & make 
+      2. Edit makefile & make
  - Tested compilations:
       1. GCC 9.2.0_2 + boost 1_56_0 (macbook pro; need to > 8 for ranged for)
       2. intel 19.1.3.304 + boost 1_75_0 (lenovo@BNU)
