--- a/readme
+++ b/readme
@@ -3,21 +3,21 @@
 
    Started by Zhendong Li @ Sep 14, 2019
 
-Goals: 
- 1. Explore the complexity of electronic structure problems (FeMoco, Mn12, U2, etc.)
- 2. Predict magnetic parameters (g-/A-tensors) of transition metal compounds 
+=== Goals === 
+ - Explore the complexity of electronic structure problems (FeMoco, Mn12, U2, etc.)
+ - Predict magnetic parameters (g-/A-tensors) of transition metal compounds 
 
-Features:
- 1. FCI and SCI for benchmarking & preparing initial guesses for TNS
- 2. DMRG and CTNS (NR and R with time-reversal symmetry adaptation)
+=== Features ===
+ - FCI and SCI for benchmarking & preparing initial guesses for TNS
+ - DMRG and CTNS (NR and R with time-reversal symmetry adaptation)
 
-How to install:
+=== How to install ===
  - Requirements:
       1. C++ compiler
       2. BOOST (https://www.boost.org/users/download/)
  - Extlibs:
       1. zquatev (https://github.com/qsimulate-open/zquatev) for 
-	 diagonalization of quaternion matrix (relativistic case)
+	      diagonalization of quaternion matrix (relativistic case)
       2. compression libraries: lz4 & zstd
       3. gpu: magma
          $ cp make.inc-examples/make.inc.mkl-icc make.inc
@@ -32,7 +32,7 @@ How to install:
       2. intel 19.1.3.304 + boost 1_75_0 (lenovo@BNU)
       3. intel 20.0.4 + boost 1_77_0 (BSCC-A6; slurm support)
 
-How to run:
+=== How to run ===
  - General procedure:	
       1. run sci.x to generate initial guess
       2. run ctns.x to optimize CTNS, see examples
@@ -41,8 +41,9 @@ How to run:
       1. ../../bin/sci.x input.dat
       2. mpirun -np 10 ../../bin/ctns.x input.dat
 
-Known problems:
- 1. mpi::reduce hangs on intel MPI 
+=== Known problems ===
+ - mpi::reduce hangs on intel MPI 
     https://github.com/boostorg/mpi/issues/124
     edit BOOST_MPI_USE_IMPROBE in boost/mpi/config.hpp
+ - std::filesystem may cause problems for old compilers
 
