--- a/src/ctns/README
+++ b/src/ctns/README
@@ -365,4 +365,9 @@ PREPROCESS:
  preprocess_twodot.h
  preprocess_hmu.h  
  preprocess_hxlist.h  
- 
+
+
+############################
+# V4: GPU implementation   #
+############################
+
