working on qinfoXsu2

--- a/src/qtensor/README
+++ b/src/qtensor/README
@@ -4,6 +4,12 @@ For SU2 symmetry:
 qnum_qkind.h
 qtensor.h
 
+qinfo2su2.h
+qinfo3su2.h
+qinfo4su2.h
+
+fermionsign.h
+
 qtensor2.h
 qtensor3.h
 qtensor4.h
