--- a/doc/readme
+++ b/doc/readme
@@ -14,23 +14,29 @@
 
 === How to install ===
  - Requirements:
-      1. C++ compiler
-      2. BOOST (https://www.boost.org/users/download/)
- - Extlibs:
-      1. extlibs/zquatev: (https://github.com/qsimulate-open/zquatev) for 
-	      diagonalization of quaternion matrix (relativistic case)
-      2. extlibs/magma: for gpu
+      1. C++ compiler [gcc>=9.3 is preferred]
+      2. boost (https://www.boost.org/users/download/)
+      3. openmpi: need to comipled with 64-bit integer support
+            ./configure --prefix=/public/home/bnulizdtest/openmpi/install64 --with-slurm --with-pmi --with-pmix FFLAGS="-m64 -fdefault-integer-8" FCFLAGS="-m64 -fdefault-integer-8" CFLAGS=-m64 CXXFLAGS=-m64 --enable-mpi-fortran=usempi
+            make -j N && make install
+      4. mathlib/gsl: for SA-DMRG
+      x. mathlib/lapack: for linear algebra [NOT REQUIRED IF MKL EXIST]
+      x. compression libraries: lz4 & zstd [NOT USED NOW]
+ - For GPU:
+      1. extlibs/magma
          $ cp make.inc-examples/make.inc.mkl-icc make.inc
          $ 修改make.inc的22行 GPU架构为GPU_TARGET ?= Volta或者Ampere （NVIDIA GeForce RTX 3090）
          $ make
          $ make install prefix= INSTALL_PATH
-      3. mathlib/gsl: for SA-DMRG
-      4. mathlib/lapack: for linear algebra [NOT REQUIRED IF MKL EXIST]
-      5. compression libraries: lz4 & zstd [NOT USED NOW]
+      2. extlibs/nccl      
+ - Extlibs:
+      1. extlibs/zquatev: (https://github.com/qsimulate-open/zquatev) for 
+	      diagonalization of quaternion matrix (relativistic case)
  - Install:
-      1. Edit makefile in extlibs/zquatev/ & make 
-      2. Go to src/ctns/gpu_kernel & make [if GPU is used, be careful about Cuda toolkit & runtime version]
-      2. Edit makefile & make
+      1. Setup all the einvironments
+      2. Edit makefile in extlibs/zquatev/ & make 
+      3. Go to src/ctns/gpu_kernel & make [if GPU is used, be careful about Cuda toolkit & runtime version]
+      4. Edit makefile & make
  - Tested compilations:
       1. GCC 9.2.0_2 + boost 1_56_0 (macbook pro; need to > 8 for ranged for)
       2. intel 19.1.3.304 + boost 1_75_0 (lenovo@BNU)
@@ -50,6 +56,6 @@
     https://github.com/boostorg/mpi/issues/124
     edit BOOST_MPI_USE_IMPROBE in boost/mpi/config.hpp
  - std::filesystem may cause problems for old compilers
- - magma needs to be compiled with the same compiler as focus
+ - magma needs to be compiled with the same compiler as FOCUS
    otherwise, there will be problems in using openmp!
 
