add example for fe2s2

--- a/pyutils/spinAnalysis/spin-spin correlation function - fe4s4.ipynb
+++ b/pyutils/spinAnalysis/spin-spin correlation function - fe4s4.ipynb
@@ -40,7 +40,7 @@
    "source": [
     "import rdmutils\n",
     "\n",
-    "twordm_spatial = rdmutils.get_twordm_spatialorbital_tensor(k)"
+    "twordm_spatial = rdmutils.get_twordm_spatialorbital_tensor(k,'fe4s4/rdm2mps.0.0.txt')"
    ]
   },
   {
@@ -81,7 +81,7 @@
    "source": [
     "import oodmrg_util\n",
     "\n",
-    "urot = oodmrg_util.loadUrot(\"urot.txt\",k)"
+    "urot = oodmrg_util.loadUrot(\"fe4s4/urot.txt\",k)"
    ]
   },
   {
@@ -193,7 +193,7 @@
     }
    ],
    "source": [
-    "spinAnalysis.genSpinSpinPlot(sisj)"
+    "spinAnalysis.genSpinSpinPlot(sisj,'fe4s4/fe4s4.pdf')"
    ]
   },
   {
