--- a/pyutils/spinAnalysis/spin-spin correlation function - fe8s7.ipynb
+++ b/pyutils/spinAnalysis/spin-spin correlation function - fe8s7.ipynb
@@ -35,7 +35,7 @@
    "id": "514867f5-0f9e-4737-8655-5c0fff229160",
    "metadata": {},
    "source": [
-    "## twordm for Fe4S4"
+    "## twordm for Fe8S7"
    ]
   },
   {
@@ -191,14 +191,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "0b92d13d-22dd-4625-a5dd-4f5767f13f92",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
    "execution_count": 16,
    "id": "9ea15dc2-d7d1-4c30-81d3-ca28e923984c",
    "metadata": {},
@@ -297,7 +289,7 @@
     }
    ],
    "source": [
-    "spinAnalysis.genSpinSpinPlot(sisj_ordered)"
+    "spinAnalysis.genSpinSpinPlot(sisj_ordered,'fe8s7/fe8s7.pdf')"
    ]
   },
   {
